[gd_scene format=3]

[ext_resource type="Script" path="res://assets/enemies/throwing_enemy.gd" id="1_throwing_enemy"]
[ext_resource type="Script" path="res://assets/general/entity_stats.gd" id="2_entity_stats"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(2.5, 3.0, 2.5)

[sub_resource type="BoxMesh" id="BoxMesh_body"]
size = Vector3(2.5, 2.5, 2.0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_body"]
resource_local_to_scene = true
albedo_color = Color(0.35, 0.45, 0.35, 1)
roughness = 0.8
emission_enabled = false
emission = Color(0.1, 0.15, 0.1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_arm"]
radius = 0.3
height = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_arm"]
resource_local_to_scene = true
albedo_color = Color(0.4, 0.5, 0.4, 1)
roughness = 0.85

[sub_resource type="SphereMesh" id="SphereMesh_head"]
radius = 0.6
height = 1.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_head"]
resource_local_to_scene = true
albedo_color = Color(0.45, 0.55, 0.45, 1)

[node name="ThrowingEnemy" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 1
script = ExtResource("1_throwing_enemy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0)
mesh = SubResource("BoxMesh_body")
surface_material_override/0 = SubResource("StandardMaterial3D_body")

[node name="HeadMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.0, 0)
mesh = SubResource("SphereMesh_head")
surface_material_override/0 = SubResource("StandardMaterial3D_head")

[node name="ArmMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0, -1, 0, 1, 0, 1.5, 2.0, -0.5)
mesh = SubResource("CapsuleMesh_arm")
surface_material_override/0 = SubResource("StandardMaterial3D_arm")

[node name="ThrowPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 3.0, -1.5)

[node name="EntityStats" type="Node" parent="."]
script = ExtResource("2_entity_stats")
health = 15.0
max_health = 15.0
metadata/_custom_type_script = "uid://byxnatvcndpcu"
